@@ -40,7 +40,7 @@ public:
   virtual bool getBool(const std::string& key, bool defaultVal) const {
     if (key == Configuration::SUBSCRIBER_AUTOCONSUME) {
       return false;
-    } else if (key == Configuration::ENABLE_MULTIPLEXING) {    
+    } else if (key == Configuration::SUBSCRIPTION_CHANNEL_SHARING_ENABLED) {    
       return true;
     } else {
       return TestServerConfiguration::getBool(key, defaultVal);
